# Advanced-CPP-P1G5

./: .gitignore  CMakeLists.txt  Client.cpp  Readme.md  main.cpp
Phase 1/: CMakeLists.txt  MatrixOps.cpp  MatrixOps.h  main.cpp
Phase_2/: CMakeLists.txt  hft_client.cpp  hft_server.cpp  readme.md
Phase_2/arpa/: inet.h
Phase_3/: CMakeLists.txt  Readme.md  feed_parser.h  main.cpp  market_snapshot.cpp  market_snapshot.h  order_manager.cpp  sample_feed.txt  trade_sim
Phase_4/: CMakeLists.txt  README.md
Phase_4/include/: MarketData.hpp  MarketDataFeedSimulator.h  MatchingEngine.hpp  MemoryPool.h  Order.hpp  OrderBook.hpp  OrderManager.hpp  TradeLogger.hpp
Phase_4/src/: MarketData.cpp  MarketDataFeedSimulator.cpp  MatchingEngine.cpp  OrderBook.cpp  OrderManager.cpp  TradeLogger.cpp  main.cpp
Phase_4/test/: BriefAnalysis.txt  test_latency.cpp
Phase_5/: CMakeLists.txt
Phase_5/src/: OrderBook.cpp
Phase_5/test/: TestOrderBook.py
Session7/: Analytics.cpp  Benchmarks.hpp  CMakeLists.txt  ConcurrentQueue.hpp  ExperimentalQueue.hpp  MemoryOrderingBenchmark.cpp  OrderProcessing.cpp  OrderTypes.hpp  README.md  main.cpp
final_project/: Buffer.cpp  Buffer.h  TradeEngine.cpp  TradeInterface.cpp  TradeInterface.h  client.cpp  main_server.cpp
final_project/netinet/: in.h
project_phase_3/: a.out  demo  local_order_book  main.cpp  market_snapshot.cpp  market_snapshot.h  order_manager  order_manager.cpp  order_manager.h
project_phase_4/include/: MarketData.h  MarketDataFeedSimulator.h  MatchingEngine.h  MemoryPool.h  Order.h  OrderBook.h  OrderManager.h  TradeLogger.h
project_phase_4/src/: MarketData.cpp  MarketDataFeedSimulator.cpp  MatchingEngine.cpp  OrderBook.cpp  OrderManager.cpp  TradeLogger.cpp  main.cpp
test/: MatrixOpsTest.cpp
